# todoapp-rs

./: Cargo.toml  README.md  compose.yaml  mongo_compose.yml
client/: Cargo.toml
client/src/: main.rs
lib/: business.rs
migrations/: 20250718202923_init.sql
mongodb-client/: Cargo.toml
mongodb-client/src/: main.rs
mongodb-net/: Cargo.toml
mongodb-net/src/: lib.rs
mongodb-server/: Cargo.toml
mongodb-server/src/: lib.rs  main.rs
net/: Cargo.toml
net/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: lib.rs  main.rs  net.rs
